--- a/src/recipe_list/recipe_list.html
+++ b/src/recipe_list/recipe_list.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <section class="section--recipe-cards shown">
     <header>
       <nav>
         <a href="/src/home/home.html">
@@ -145,6 +146,10 @@
               </div>
             </recipe-card> -->
         </main>
+        </section>
+    <section class="section--recipe-expand">
+      <recipe-expand></recipe-expand>
+    </section>
 
 
 
