--- a/src/recipe_list/recipe_list.html
+++ b/src/recipe_list/recipe_list.html
@@ -28,6 +28,9 @@
         </a>
       </nav>
     </header>
+    <nav>
+      <li><a href="#Buttom">Go to Buttom</a></li>
+    </nav>
     <div class="search-container">
           <input type="text" placeholder="SEARCH RECIPE 🧇" class="search-bar">
           <button class="search-button">SEARCH</button>
@@ -37,6 +40,7 @@
       <input type="text" placeholder="ADD RECIPE" class="add-bar">
       <button class="add-button">ADD</button>
 </div>
+
     <!-- navbar -->
     <div id="navButton">
       <button class="openbtn" onclick="clickNav()">&#9776;</button>
